
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(testngpp)

SET(PACKAGE_NAME \"testngpp\")
SET(PACKAGE_STRING \"testngpp\")
SET(PACKAGE_BUGREPORT \"arthur.ii.yuan@gmail.com\")
SET(PACKAGE_URL \"http://code.google.com/p/test-ng-pp\")
SET(PACKAGE \"testngpp\")
SET(VERSION \"0.4\")

FIND_LIBRARY(DL_LIBRARY NAMES dl)
IF(DL_LIBRARY)
  SET(TESTNGPP_USE_DLOPEN TRUE)
ELSE(DL_LIBRARY)
  SET(TESTNGPP_USE_DLOPEN FALSE)
ENDIF(DL_LIBRARY)


ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(src/listeners)
ADD_SUBDIRECTORY(src/runner)
ADD_SUBDIRECTORY(libs)
ADD_SUBDIRECTORY(ut)
ADD_SUBDIRECTORY(samples)
