
INCLUDE(FindPythonInterp)

IF(PYTHONINTERP_FOUND)
  SET(PYTHON ${PYTHON_EXECUTABLE})
ELSE(PYTHONINTERP_FOUND)
  MESSAGE(FATAL_ERROR "No Python interpreter found")
ENDIF(PYTHONINTERP_FOUND)

IF(CMAKE_SYSTEM_NAME MATCHES Linux)
  IF(CMAKE_COMPILER_IS_GNUCXX)
    SET(CMAKE_MODULE_LINKER_FLAGS "-Wl,--fatal-warnings -Wl,--no-undefined")
  ENDIF(CMAKE_COMPILER_IS_GNUCXX)
ENDIF(CMAKE_SYSTEM_NAME MATCHES Linux)

SET(SAMPLE_CASES 
  ${CMAKE_CURRENT_SOURCE_DIR}/TestFoo.h
  ${CMAKE_CURRENT_SOURCE_DIR}/TestCxxTest.h
  ${CMAKE_CURRENT_SOURCE_DIR}/TestBar.h)

SET(SAMPLE_SRC   ${CMAKE_CURRENT_SOURCE_DIR}/TestFoo.cpp)

SET(TEST_GENERATOR ${CMAKE_SOURCE_DIR}/scripts/testngppgen3.py)

ADD_CUSTOM_COMMAND(
  OUTPUT ${SAMPLE_SRC}
  COMMAND ${PYTHON} ${TEST_GENERATOR} -o ${SAMPLE_SRC} ${SAMPLE_CASES}
)

LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/src)

ADD_LIBRARY(sample MODULE ${SAMPLE_SRC})

INCLUDE_DIRECTORIES(BEFORE ${CMAKE_SOURCE_DIR}/include .)

SET_TARGET_PROPERTIES(sample PROPERTIES SUFFIX ".so")

TARGET_LINK_LIBRARIES(sample -ltestngpp)

ADD_CUSTOM_TARGET(sample_src DEPENDS ${SAMPLE_SRC})

ADD_DEPENDENCIES(sample sample_src)
