
INCLUDE(FindPythonInterp)

IF(PYTHONINTERP_FOUND)
  SET(PYTHON ${PYTHON_EXECUTABLE})
ELSE(PYTHONINTERP_FOUND)
  MESSAGE(FATAL_ERROR "No Python interpreter found")
ENDIF(PYTHONINTERP_FOUND)

IF(MSVC)
  SET(RM del)
ELSE(MSVC)
  SET(RM rm -rf)
ENDIF(MSVC)

ADD_CUSTOM_TARGET(compile-testngppgen ALL
   COMMAND ${PYTHON} ${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/scripts/pycompile.py) 
   
ADD_CUSTOM_TARGET(clean 
   COMMAND ${RM} ${CMAKE_SOURCE_DIR}/scripts/*.pyc ${CMAKE_SOURCE_DIR}/scripts/testngppgen/*.pyc)

INSTALL(DIRECTORY . DESTINATION testngpp/generator
       FILES_MATCHING PATTERN "*.pyc"
       PATTERN "CMakeFiles" EXCLUDE
       PATTERN ".svn" EXCLUDE
       PATTERN ".py" EXCLUDE)
